objects/Proposed_Products__c.object
<CustomObject>
    <fields>
        <fullName>ADR_Drawloop__c</fullName>
        <formula>Benefit_Request_Form__r.Opportunity__r.ADR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADR Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Drawloop__c</fullName>
        <formula>Benefit_Request_Form__r.Opportunity__r.Lead_Rep_Name_User__r.FirstName +' ' +Benefit_Request_Form__r.Opportunity__r.Lead_Rep_Name_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Drawloop__c</fullName>
        <formula>Text(Benefit_Request_Form__r.Opportunity__r.Service_Rep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARC_Approved__c</fullName>
        <formula>if(text(Benefit_Request_Form__r.ARC_Approval_Status__c) = "Approved by Committee", true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARC_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARC check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Has_Sub_Groups__c</fullName>
        <formula>Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c</formula>
        <label>Account Has Sub Groups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name_Final_Drawloop__c</fullName>
        <formula>/*IF(Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c = False,
	Benefit_Request_Form__r.Account__r.Account_Legal_Name__c ,IF(ISBLANK(Benefit_Request_Form__r.Sub_Group_Account__r.Account_Legal_Name__c ),
															Sub_Group_Account__r.Account_Legal_Name__c ,  Benefit_Request_Form__r.Sub_Group_Account__r.Account_Legal_Name__c ))*/

Benefit_Request_Form__r.Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Final Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Renewal_Date__c</fullName>
        <formula>Benefit_Request_Form__r.Account__r.Final_Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Renewal Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Dental_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Dental Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Drug_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Drug Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Medical_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Medical Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Product_Name__c</fullName>
        <formula>Case (RecordType.Name,
'Medical', Account_Specified_Medical_Product_Name__c,
'Drug',   Account_Specified_Drug_Product_Name__c,
'Dental',  Account_Specified_Dental_Product_Name__c, 
'Vision',  Account_Specified_Vision_Product_Name__c,
Account_Specified_Medical_Product_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Specified Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Vision_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Vision Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Benefit_Request_Form__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accumulation_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accumulation Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Addition_to_Platform_Indicator__c</fullName>
        <label>Platform Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Market_Segments__c</fullName>
        <label>All Market Segments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large(1000+)</fullName>
                </value>
                <value>
                    <fullName>Large(200-999)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AllergySerums__c</fullName>
        <label>Allergy Serums</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Serums_Limitation_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allergy Serums Limitation/Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Renewal_Eff_Date_Drawloop__c</fullName>
        <formula>Benefit_Request_Form__r.Account__r.Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Renewal Eff Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRF_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposed Products (Account)</relationshipLabel>
        <relationshipName>Proposed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRF_Effective_Date_Drwaloop__c</fullName>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Effective Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRF_ID__c</fullName>
        <formula>Benefit_Request_Form__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Proposed Products</relationshipLabel>
        <relationshipName>Proposed_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Benefits_Completed__c</fullName>
        <formula>(IF( Has_Benefit_Details__c = True,
 (IMAGE("/servlet/servlet.FileDownload?file=01560000001jIqv", "Start", 25, 25)),
 IF(Plan_Name__r.Has_Benefit_Summary__c = True, 
(IMAGE("/servlet/servlet.FileDownload?file=01560000001jIr0", "Start", 20, 20)),
'Benefits not available')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefits Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Last_Modified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefits Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefits_Renew__c</fullName>
        <label>Benefits Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar year</fullName>
                </value>
                <value>
                    <fullName>Contract year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlueVision_Plus_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BlueVision Plus Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blue_Rewards__c</fullName>
        <label>Blue Rewards</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Arrangement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Fund_Type__c</fullName>
        <label>CDH Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDH__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Type__c</fullName>
        <label>CDH Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDH__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA Integrated</fullName>
                </value>
                <value>
                    <fullName>HRA Non-Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH__c</fullName>
        <label>CDH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cafeteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CareFirst_Formulary_Selection__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CareFirst Formulary Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carve_Out_Integration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx OOP Integration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Related_Medical__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From Related Medical</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_DM_Wellness__c</fullName>
        <description>B-03445 - replacing an existing checkbox field Wellness</description>
        <label>Integrated WDM Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Network_Drawloop__c</fullName>
        <description>This field is used to check the count of network and utilized for drawloop purpose</description>
        <label>Count of Network Drawloop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_DM_Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrated DM/Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_New__c</fullName>
        <label>Customization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non - Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom  Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom Products require a marked up benefit summary. Please attach the marked up benefit summary as an attachment.</inlineHelpText>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DHMO__c</fullName>
        <formula>ISPICKVAL(Plan_Name__r.Product_Sub_Category__c,"DHMO")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Wellness_Rules1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DM/Wellness Rules</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DeductibleAccumulatorMethod__c</fullName>
        <label>Deductible Accumulator Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deductible_Applies__c</fullName>
        <label>Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Family Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Product_Name__c</fullName>
        <label>Dental Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueDental Plus (PPO or 90 fee schedule)</fullName>
                </value>
                <value>
                    <fullName>Voluntary BlueDental Plus (PPO fee schedule only)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Basic</fullName>
                </value>
                <value>
                    <fullName>Preferred (PPO) Dental</fullName>
                </value>
                <value>
                    <fullName>Traditional Dental (coinsurance is same for IN and OON)</fullName>
                </value>
                <value>
                    <fullName>Voluntary Preferred Dental</fullName>
                </value>
                <value>
                    <fullName>Voluntary Traditional Dental</fullName>
                </value>
                <value>
                    <fullName>BlueDental Preferred (Medigap)</fullName>
                </value>
                <value>
                    <fullName>Voluntary BlueDental Preferred (Medigap)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Traditional (Medigap)</fullName>
                </value>
                <value>
                    <fullName>Voluntary BlueDental Traditional (Medigap)</fullName>
                </value>
                <value>
                    <fullName>BlueDHMO</fullName>
                </value>
                <value>
                    <fullName>Dental HMO (Available ridered to BlueChoice medical products only)</fullName>
                </value>
                <value>
                    <fullName>Freestanding Dental HMO (DHMO)</fullName>
                </value>
                <value>
                    <fullName>Dental HMO Opt-Out (Available ridered to BlueChoice medical products only)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Plus</fullName>
                </value>
                <value>
                    <fullName>Preferred Dental</fullName>
                </value>
                <value>
                    <fullName>Traditional Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Product_Options__c</fullName>
        <label>Dental Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan 1 (100/80/80/50 IN and 100/80/80/50 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50 IN and 80/60/60/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50 IN and 100/80/50/50 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/80/50/50 IN and 80/60/35/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 5 (100/80/80/50 IN and 100/80/80/50 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 6 (100/80/80/50 IN and 80/60/60/35 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 7 (100/80/50/50 IN and 100/80/50/50 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 8 (100/80/50/50 IN and 80/60/35/35 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (100/80/0/0 IN and 80/60/0/0 OON) - $1,000 max, $25 deductible and no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50 IN and 60/35/35/35/35 OON)- $1,000 max, $25 deductible and $800 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50 IN and 60/35/35/35 OON) - $1,500 max, $0 deductible and no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,000 max, $25 deductible and $800/$1,000/$1,200 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,500 max, $25 deductible and $800/$1,000/$1,200/$1,500  ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,000 max, $0 deductible and $800/$1,000 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,500 max, $0 deductible and $800 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,000 max, $25 deductible and $800/$1,000/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3  (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,500 max, $25 deductible and $800/$1,500  ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,000 max, $25 deductible and $1,000 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,000 max, $25 deductible and $1,000 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,500 max, $25 deductible and $1,000/$1,500  ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,000 max, $0 deductible and $1,000 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 5 (100/90/60/60/50 IN and 80/80/50/50/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50) - $1,000 max, $25 deductible and $800 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50) - $1,000 max, $50 deductible and $1,000 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50) - $1,500 max, $50 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,000 max, $25 deductible and $800/$1,000/$1,200/$1,500 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $25 deductible and $800/$1,000/$1,200 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,000 max, $50 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $50 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) -  $1,500 max, $50 deductible and $1,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Variables_by_Product__c</fullName>
        <label>Dental Variables by Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Dental_Product_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deductible Applies to All Basic Services</fullName>
                </value>
                <value>
                    <fullName>Annual Maximum Applies to All Basic Services</fullName>
                </value>
                <value>
                    <fullName>Preventive &amp; Diagnostic Services</fullName>
                </value>
                <value>
                    <fullName>Basic Services</fullName>
                </value>
                <value>
                    <fullName>Deductible Applies to All Basic and Major Services</fullName>
                </value>
                <value>
                    <fullName>Annual Maximum Applies to All Basic and Major Services</fullName>
                </value>
                <value>
                    <fullName>Basic Services and Major Services - Surgical</fullName>
                </value>
                <value>
                    <fullName>Major Services - Restorative</fullName>
                </value>
                <value>
                    <fullName>Annual Deductible and Maximum</fullName>
                </value>
                <value>
                    <fullName>Major Services - Surgical</fullName>
                </value>
                <value>
                    <fullName>Orthodontic Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppCopayApply__c</fullName>
        <label>Diabetic Supplies Copay Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppDedApply__c</fullName>
        <label>Diabetic Supplies Ded Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppMandateApply__c</fullName>
        <label>Diabetic Supplies Mandate Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Dental_Header_Drawloop__c</fullName>
        <defaultValue>"CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. are both independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."+BR()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Dental Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Med_Drg_Header_Drawloop__c</fullName>
        <defaultValue>"Serving Maryland, the District of Columbia and portions of Virginia, CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. Davis Vision offers an extensive national network of optometrist, ophthalmologists and opticians. Davis Vision is an independent company that provides administrative services for vision care to CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. members. Davis Vision is solely responsible for the services it provides. CareFirst of Maryland, Inc., Group Hospitalization and Medical Services, Inc., First Care, Inc., The Dental Network and CareFirst BlueChoice, Inc. are independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."+BR()+BR()+" "</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Med/Drg Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Vision_Header_Drawloop__c</fullName>
        <defaultValue>"CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. are both independent licensees of the Blue Cross and Blue Shield Association."+BR()+" ® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."+BR()+"CareFirst Partners with Davis Vision to offer an extensive national network of optometrists, ophthalmologists and opticians.Davis Vision is an independent company that provides administrative services for vision care to CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. members. Davis Vision is solely responsible for the services it provides."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Vision Header Drawloop</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In D DHMO Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>